--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>シベリア送り</title>
-
-
-  <!-- user -->
   <link rel="stylesheet" href="/common/index.css">
+
 </head>
 
 <body>
@@ -19,7 +17,7 @@
         <p>あなた方をシベリアへお送りします</p>
         <a class="help" href="https://dic.nicovideo.jp/id/5597007" target="_blank">シベリア送りとは</a>
         <a class="next" href="/lets-go-siberia">自らシベリアへ行く</a>
-        <a class="next" href="#setting">誰かをシベリアに送る</a>
+        <button class="next" id="to_setting">誰かをシベリアに送る</button>
       </div>
     </section>
     <section id="setting">
@@ -29,17 +27,29 @@
           @<input type="text" name="twitterid" id="twitterid" placeholder="相手のTwitterIDを入力">
         </div>
         <p>※Twitter以外で送りたい方はそのまま次へお進みください</p>
-        <a class="set-next" href="#share">次へ</a>
+        <button class="next back" id="to_share">次へ</button>
       </div>
     </section>
     <section id="#share">
       <div class="content">
-        <a class="set-next" href="#setting">戻る</a>
         <h2>シベリアに送る</h2>
-        <textarea name="sharebox" id="sharebox" disabled>お前は #シベリア送り だ！https://siberia.nekozuki.me/lets-go-siberia</textarea>
+        <textarea name="sharebox" id="sharebox"
+          disabled>お前は #シベリア送り だ！https://siberia.nekozuki.me/lets-go-siberia</textarea>
+        <a class="sharebut tw_sharebut" id="tw_sharebut" target="_blank"
+          href="https://twitter.com/intent/tweet?text=お前は%20%23シベリア送り%20だ！&url=https%3A%2F%2Fsiberia.nekozuki.me%2Flets-go-siberia">
+          Tweet</a>
+        <a class="next sharebut">Copy</a>
+        <button class="next back" id="to_top">戻る</button>
       </div>
-      
+
     </section>
   </div>
+  <footer>
+    ©2020 AyumuNekozuki / Used VCI by Photo: <a
+      href="https://seed.online/products/78cd787e500e440dc36d3ee49ebcf12a6d0986174ba38ba5ba7808ef65735b8c">森林4</a>
+  </footer>
+
+  <script src="/common/main.js"></script>
 </body>
+
 </html>
