--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="/common/index.css">
   <link rel="stylesheet" href="/common/loading.css">
 
+      <!-- ogp -->
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:site" content="@nekozuki_2525" />
+      <meta property="og:url" content="https://siberia.nekozuki.me" />
+      <meta property="og:title" content="シベリア送り" />
+      <meta property="og:description" content="あなたがたをシベリアへお送りします" />
+      <meta property="og:image" content="https://siberia.nekozuki.me/common/bg.png" />
 </head>
 
 <body>
