--- a/lets-go-siberia/index.html
+++ b/lets-go-siberia/index.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>あなたをシベリアへお送りします</title>
   <link rel="stylesheet" href="/lets-go-siberia/letsgo.css">
+
+    <!-- ogp -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@nekozuki_2525" />
+    <meta property="og:url" content="https://siberia.nekozuki.me/lets-go-siberia" />
+    <meta property="og:title" content="シベリア送り" />
+    <meta property="og:description" content="あなたをシベリアへお送りします" />
+    <meta property="og:image" content="https://siberia.nekozuki.me/common/bg.png" />
 </head>
 
 <body>
