--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
       href="https://seed.online/products/78cd787e500e440dc36d3ee49ebcf12a6d0986174ba38ba5ba7808ef65735b8c">森林4</a>
   </footer>
 
-  <script src="/common/main.js"></script>
   <script src="/common/loading.js"></script>
+  <script src="/common/scroll.js"></script>
+  <script src="/common/main.js"></script>
   <script src="/common/copy.js"></script>
 </body>
 
