--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
         <p>※Twitter以外で送りたい方はそのまま次へお進みください</p>
         <button class="next back" id="to_share">次へ</button>
+        <button style="display: none;" id="to_share_next"></button>
       </div>
     </section>
     <section id="#share">
