--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <section id="#share">
       <div class="content">
         <h2>シベリアに送る</h2>
+        <p>用法には十分ご注意ください</p>
         <textarea name="sharebox" id="sharebox"
          disabled >お前は #シベリア送り だ！https://siberia.nekozuki.me/lets-go-siberia</textarea>
         <a class="sharebut tw_sharebut" id="tw_sharebut" target="_blank"
