--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>シベリア送り</title>
+  <title>シベリア送り（薪）</title>
   <link rel="stylesheet" href="/common/index.css">
   <link rel="stylesheet" href="/common/loading.css">
 
@@ -12,9 +12,9 @@
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:site" content="@nekozuki_2525" />
       <meta property="og:url" content="https://siberia.nekozuki.me" />
-      <meta property="og:title" content="シベリア送り" />
+      <meta property="og:title" content="シベリア送り（薪）" />
       <meta property="og:description" content="あなたがたをシベリアへお送りします" />
-      <meta property="og:image" content="https://siberia.nekozuki.me/common/bg.png" />
+      <meta property="og:image" content="https://siberia.nekozuki.me/common/maki.png" />
 </head>
 
 <body>
@@ -30,9 +30,9 @@
     <section id="top">
       <div class="content">
         <h1>シベリア送り</h1>
-        <p>あなた方をシベリアへお送りします</p>
+        <p>2020/12/24更新：薪を燃やし始めました</p>
         <a class="help" href="https://dic.nicovideo.jp/id/5597007" target="_blank">シベリア送りとは</a>
-        <a class="next" href="/lets-go-siberia">自らシベリアへ行く</a>
+        <a class="next makilive" href="/lets-go-siberia">薪を燃やしに行く</a>
         <button class="next" id="to_setting">誰かをシベリアに送る</button>
       </div>
     </section>
@@ -65,7 +65,7 @@
   </div>
   <footer>
     ©2020 AyumuNekozuki / Used VCI by Photo: <a
-      href="https://seed.online/products/78cd787e500e440dc36d3ee49ebcf12a6d0986174ba38ba5ba7808ef65735b8c">森林4</a>
+      href="https://seed.online/products/78cd787e500e440dc36d3ee49ebcf12a6d0986174ba38ba5ba7808ef65735b8c">森林4</a> , <a href="https://seed.online/products/76330123144d34def070d54159c2335a8e103773b64c97fe11e2c6d7d8da761e">暖炉</a>
   </footer>
 
   <script src="/common/loading.js"></script>
