--- a/lets-go-siberia/index.html
+++ b/lets-go-siberia/index.html
@@ -11,14 +11,15 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@nekozuki_2525" />
     <meta property="og:url" content="https://siberia.nekozuki.me/lets-go-siberia" />
-    <meta property="og:title" content="シベリア送り" />
+    <meta property="og:title" content="シベリア送り（薪）" />
     <meta property="og:description" content="あなたをシベリアへお送りします" />
-    <meta property="og:image" content="https://siberia.nekozuki.me/common/bg.png" />
+    <meta property="og:image" content="https://siberia.nekozuki.me/common/maki.png" />
 </head>
 
 <body>
   <div id="main">
     <section id="default">
+      <!--
       <div class="content">
         <p>あなたをシベリアへお送りします。</p>
         <p>なぜ送られたのかは自分の心に問いかけてみてください。</p>
@@ -26,8 +27,20 @@
         <p>それでは。Good Luck.</p>
         <p>シベリアまであと<span id="count">7</span>秒</p>
       </div>
+    -->
+      <div class="content maki">
+        <p>寒い中シベリアへ飛ばされ</p>
+        <p>さぞ辛かったでしょう。</p>
+        <p>なぜ飛ばされたのかは後々考えるとして、</p>
+        <p>とりあえず炎の近くで温まりませんか。</p>
+        <p>シベリア（薪を燃やす）まで あと<span id="count">15</span>秒</p>
+      </div>
     </section>
   </div>
+  <footer>
+    ©2020 AyumuNekozuki / Used VCI by Photo: <a
+      href="https://seed.online/products/78cd787e500e440dc36d3ee49ebcf12a6d0986174ba38ba5ba7808ef65735b8c">森林4</a> , <a href="https://seed.online/products/76330123144d34def070d54159c2335a8e103773b64c97fe11e2c6d7d8da761e">暖炉</a>
+  </footer>
   <script src="/lets-go-siberia/redirect.js"></script>
 </body>
 
