--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>シベリア送り（薪）</title>
+  <title>シベリア送り</title>
   <link rel="stylesheet" href="/common/index.css">
   <link rel="stylesheet" href="/common/loading.css">
 
-      <!-- ogp -->
-      <meta name="twitter:card" content="summary_large_image" />
-      <meta name="twitter:site" content="@nekozuki_2525" />
-      <meta property="og:url" content="https://siberia.nekozuki.me" />
-      <meta property="og:title" content="シベリア送り（薪）" />
-      <meta property="og:description" content="あなたがたをシベリアへお送りします" />
-      <meta property="og:image" content="https://siberia.nekozuki.me/common/maki.png" />
+  <!-- therdparty -->
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
+  <script src="/common/firebase_init.js"></script>
+
+  <!-- ogp -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@nekozuki_2525" />
+  <meta property="og:url" content="https://siberia.nekozuki.me" />
+  <meta property="og:title" content="シベリア送り" />
+  <meta property="og:description" content="あなたがたをシベリアへお送りします" />
+  <meta property="og:image" content="https://siberia.nekozuki.me/common/bg.png" />
 </head>
 
 <body>
@@ -30,9 +37,8 @@
     <section id="top">
       <div class="content">
         <h1>シベリア送り</h1>
-        <p>2020/12/24更新：薪を燃やし始めました</p>
         <a class="help" href="https://dic.nicovideo.jp/id/5597007" target="_blank">シベリア送りとは</a>
-        <a class="next makilive" href="/lets-go-siberia">薪を燃やしに行く</a>
+        <a class="next" href="/lets-go-siberia">自らシベリアに行く</a>
         <button class="next" id="to_setting">誰かをシベリアに送る</button>
       </div>
     </section>
@@ -52,9 +58,9 @@
         <h2>シベリアに送る</h2>
         <p>用法には十分ご注意ください</p>
         <textarea name="sharebox" id="sharebox"
-         disabled >お前は #シベリア送り だ！https://siberia.nekozuki.me/lets-go-siberia</textarea>
+         disabled >お前は #シベリア送り だ！#超シベリア送り https://siberia.nekozuki.me/lets-go-siberia </textarea>
         <a class="sharebut tw_sharebut" id="tw_sharebut" target="_blank"
-          href="https://twitter.com/intent/tweet?text=お前は%20%23シベリア送り%20だ！&url=https%3A%2F%2Fsiberia.nekozuki.me%2Flets-go-siberia">
+          href="https://twitter.com/intent/tweet?text=お前は%20%23シベリア送り%20だ！%20%23超シベリア送り%20 &url=https%3A%2F%2Fsiberia.nekozuki.me%2Flets-go-siberia">
           Tweet</a>
         <a class="next sharebut" id="copy">Copy</a>
         
@@ -64,8 +70,8 @@
     </section>
   </div>
   <footer>
-    ©2020 AyumuNekozuki / Used VCI by Photo: <a
-      href="https://seed.online/products/78cd787e500e440dc36d3ee49ebcf12a6d0986174ba38ba5ba7808ef65735b8c">森林4</a> , <a href="https://seed.online/products/76330123144d34def070d54159c2335a8e103773b64c97fe11e2c6d7d8da761e">暖炉</a>
+    ©2020-2021 AyumuNekozuki / Used VCI by Photo: <a
+      href="https://seed.online/products/78cd787e500e440dc36d3ee49ebcf12a6d0986174ba38ba5ba7808ef65735b8c">森林4</a>
   </footer>
 
   <script src="/common/loading.js"></script>
