--- a/static/lets-go-siberia/index.html
+++ b/static/lets-go-siberia/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>あなたをシベリアへお送りします</title>
-  <link rel="stylesheet" href="/lets-go-siberia/letsgo.css">
+  <link rel="stylesheet" href="/2020/lets-go-siberia/letsgo.css">
 
     <!-- ogp -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -42,7 +42,7 @@
     ©2020 AyumuNekozuki / Used VCI by Photo: <a
       href="https://seed.online/products/78cd787e500e440dc36d3ee49ebcf12a6d0986174ba38ba5ba7808ef65735b8c">森林4</a> , <a href="https://seed.online/products/76330123144d34def070d54159c2335a8e103773b64c97fe11e2c6d7d8da761e">暖炉</a>
   </footer>
-  <script src="/lets-go-siberia/redirect.js"></script>
+  <script src="/2020/lets-go-siberia/redirect.js"></script>
 </body>
 
 </html>
